--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-- Handle unary operators (either in the tokenizer or in ToPostFix)
 - Finish Parser.ConsumeValue
 - Finish the Parser
+- Handle prefix increment/decrement operators
