Implemented trivia tokens
Tokens now have two extra properties : LeadingTrivia and TrailingTrivia.
They have the Type TriviaToken, which is derived from the base class Token.
Each TriviaToken, since they inherit from Token, also have asociated trivia tokens.
Basically, it's a bi-directional linked list, if that makes any sense.
In reality, with the actual tokelets implemented right now,
it only goes in one direction most of the time.
For now, the only TriviaToklets are WhitespaceTriviaToklet,
 NewlineTriviaToklet and CommentTriviaToklet, and they have their
 corresponding TriviaTokens.

 Added Tokenizer.ConsumeTrivia(), to, well, consume trivia tokens
Also removed useless functions in Tokenizer

+ a bit of "refactoring"

--- a/TODO
+++ b/TODO
@@ -16,3 +16,15 @@
 // Maybe we could do the opposite and put the Parselets back *into* the Parser class ?
 //
 // TODO: Also, do we change Utilities.IsName(ValueNode) to ValueNode.IsName() with an extension method ?
+//
+// TODO:
+//      - foreach/in
+//      - for
+//      - class/interface/extends
+//      - break/continue
+//      - while/do
+//      - if/else
+//
+// TODO: Extract *Nodes in their own files
+//
+// TODO: Add ToGraphNode()s for TriviaTokens
