Added foreach and removed bugs !
- Added ForeachParselet and ForeachNode, thus implementing foreach loops !

- Added a namespace case in the Parser.Consume switch because I forgot
  last time, even tho it was implemented. Oops.

- Changed Utilities.InAndPostParselets to InParselets and PostParselets.
  Added IsPostfix(ExpressionKind), and changed IsPrefixParselet(Token)
  and IsPrefixParselet(ExpressionKind). Added GetPostfixParselet(Token)
  and GetPostfixParselet(ExpressionKind).

- Had to do (hopefully temporary) sacrifice : NumberToken can have a
  non-valid state at creation, a.k.a. they can be represented by an empty
  string, even tho that is NaN. In this case, the token has the value 0.
  Also : see the comment on NumberToken.Add(char)

- Same thing with BoolToken : if the initial string is empty, the value
  will be false

- Fixed *a lot* of bugs, in various contexts : strings, input peeking,
  operator precedence, return statements, numbers, "keyword detection,"
  prefix/postfix operators, and function calls parsing

- About keywords : I removed true and false from Utilities.keywords,
  since they are values, and, while constant, not *really* keywords (at
  least not the ones the parser/tokenizer needs to differentiate)

- StringConsumer.Count now takes into account reconsumeQueue.Count

- You can now use qualified names for "from" statements

- Added the ability to import everything (use '*' to do so) and added
  the IsEverything flag to ImportNode. If this is the case, the
  'ImportsName' collection will only contain a ValueNode based on the
  '*' token

- Removed some basic, stupid, errors.

- Added some ToGraphNode methods that were missing

- Added some more lines in TODO (of course !)

- Added a test.txt file for test purposes (duh)

--- a/TODO
+++ b/TODO
@@ -18,13 +18,16 @@
 // TODO: Also, do we change Utilities.IsName(ValueNode) to ValueNode.IsName() with an extension method ?
 //
 // TODO:
-//      - foreach/in
 //      - for
 //      - class/interface/extends
 //      - break/continue
 //      - while/do
 //      - if/else
+//      - type for func declaration (return type and param type)
 //
-// TODO: Extract *Nodes in their own files
+// TODO: Extract *Nodes (and maybe tokens and toklets ?) in their own files
 //
 // TODO: Add ToGraphNode()s for TriviaTokens
+//
+// TODO: re-write some parsing code (e.g. foreach.parse) to have a consistent style (e.g. consume nodes instead of tokens and
+// then check if they are valid)
