Added for-loops (and removed a tiny bug)
Also, renamed Parser.ConsumeCommaSeparatedList(string, string) to
Parser.ConsumeCommaSeparatedValueList(string, string)

The bug in question was in this function : it would validate input
that had commas with nothing behind them except other commas or the
ending delimiter.

The syntax for for-loops is the word "for" followed by a for-loop header,
followed by a simple block.

A for-loop header is delimited by opening and closing parentheses, and is
divided in three parts, separated by a comma. Each part can contain an
optional statement. The second statement, if present, must be, after evaluation, a
boolean value (obviously didn't implement the check yet, as that partly
is for semantic analysis and partly for execution). If there is no second
statement, it will always default to true

Examples :

Here, the first statement is `var i = 0`, the second statement
is `i < arr.Length`, which is a comparison, therefore is a boolean,
and the third statement is `i++`. The three statements are each separated
by a comma.

for (var i = 0, i < arr.length, i++) {
	print(arr[i])
}

Here, there is no  statements at all, however, you still have to
separate the parts with commas. Therefore, since there's no looping condition,
this for-loop will run forever.

for (,,) { }

--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@
 //      - Comments are '//' and '/*' because they can be nested way easily, they are more familiar, and it's just less work for me
 //      - Interpolated strings use $"..." and not `...`
 
-// TODO: Write actual exceptions instead on throwing just new Exception()s (about 52 basic Exceptions in total, of which 14 are empty)
+// TODO: Write actual exceptions instead on throwing just new Exception()s (about 58 classic Exceptions in total, of which 27 are empty)
 //
 // TODO: Iron out the details, for example, in the Parselets' Parse(...) methods, we need to choose if we prefer to name the token
 // parameter directly and then do some checks on it, even though that could sometimes mean that we would need to convert multiple times
@@ -18,7 +18,6 @@
 // TODO: Also, do we change Utilities.IsName(ValueNode) to ValueNode.IsName() with an extension method ?
 //
 // TODO:
-//      - for
 //      - class/interface/extends
 //      - break/continue
 //      - while/do
@@ -31,3 +30,7 @@
 //
 // TODO: re-write some parsing code (e.g. foreach.parse) to have a consistent style (e.g. consume nodes instead of tokens and
 // then check if they are valid)
+//
+// TODO: Should we do some check like IsName() at the semantic analysis phase or at parsing ? It might be better to do all the checking
+// at analysis-time, because right now some odes are valid while others not. Maybe a compromise, like, if it's absolutely possible to
+// check at parse-time, do it, but if it's not sure, wait for semantic analysis.
