--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ usual checks like `is ComplexToken <token_name>` where we replace <token_name> b
 TODO:
      - class/interface/extends
      - break/continue
-     - while/do
+     - ternary/conditional operator ( condition ? a : b)
      - type for func declaration (return type and param type)
 
 TODO: re-write some parsing code (e.g. foreach.parse) to have a consistent style (e.g. consume nodes instead of tokens and
